# Scribe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  LICENSE  MANUAL.MD  PLAN.MD  README.MD  README.md  RFC_8785_canonicalization_scheme.md  blake.md  change_events.md  config
.claude/: settings.local.json
.github/workflows/: ci.yml  codeql.yml
docker/: docker-compose.yml  mongo-init.js
docs/: MANUAL.md
include/scribe/: error.h  scribe.h  types.h
include/scribe/core/: envelope.h  hash.h  merkle.h
include/scribe/postgres/: pg_client.h  pg_monitor.h
include/scribe/storage/: database.h  repository.h
mongo-doc/: mongo_create_indexes.md  mongo_delete_event.md  mongo_drop_database_event.md  mongo_drop_event.md  mongo_drop_indexes.md  mongo_insert_event.md  mongo_invalidate_event.md  mongo_modify_event.md  mongo_rename_event.md  mongo_replace_event.md  mongo_reshard_collection.md  mongo_update_event.md  mongodb_change_streams.md  mongodb_production_reccomandations.md  shard_collection.md
scripts/: build.ps1  build.sh  install-deps-macos.sh  install-deps-ubuntu.sh  push-versioned.sh  release_and_commit.sh  setup_dev.ps1  setup_dev.sh  smoke-test.sh
sql/: pg_audit_triggers.sql  pg_logical_setup.sql  schema.sql
src/: main.c
src/adapter_mongo/: mongo_adapter.h  mongo_bootstrap.c  mongo_internal.h  mongo_json.c
src/cli/: main.c
src/commands/: cmd_commit.c  cmd_init.c  cmd_log.c  cmd_status.c  cmd_verify.c  cmd_watch.c
src/core/: blob.c  commit.c  config.c  context.c  diff.c  envelope.c  error.c  fs.c  fsck.c  hash.c  inspect.c  internal.h  library.c  merkle.c  object.c  pipe.c  ref.c  tree.c
src/postgres/: pg_client.c  pg_logical.c  pg_monitor.c  pg_trigger.c
src/storage/: database.c  objects.c  repository.c
src/util/: arena.c  arena.h  error.c  error.h  hex.c  hex.h  json.c  leb128.c  leb128.h  log.c  log.h  path.c  queue.c  queue.h
tests/integration/: test_cli_features.sh  test_mongo_testcontainers.c
tests/integration/mongo-rs/: Dockerfile  mongo-rs-entrypoint.sh
tests/unit/: test_core.c  test_main.c  test_mongo.c
